samples/_failures_safe/1761691844_ec737c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1198083.c: In function ‘main’:
./samples/SAFE/__tmp_b1198083.c:146:12: error: missing terminating " character
  146 |     printf("Total blocks processed: %
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b1198083.c:146:5: error: expected expression at end of input
  146 |     printf("Total blocks processed: %
      |     ^~~~~~
./samples/SAFE/__tmp_b1198083.c:146:5: error: expected declaration or statement at end of input
